--- a/saas/components/_logo.scss
+++ b/saas/components/_logo.scss
@@ -1,8 +1,36 @@
-@media screen and (min-width: 480px) {
+.logo {
+    display: block;
+    // padding-top: 16px;
+    // padding-bottom: 16px;
+    font-family: $secondary-font;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.16;
+    color: $title-color;
+    
+    .logo-item {
+        color: $accent-color;
+    }
+}
+// @media screen and (min-width: 480px) {
+//     // .logo {
+//     //     display: block;
+//     //     font-family: $secondary-font;
+//     //     font-weight: 700;
+//     //     font-size: 24px;
+//     //     line-height: 1.16;
+//     //     color: $title-color;
+        
+//         .logo-item {
+//             color: $accent-color;
+//         }
+//     }
+// }
+@media screen and (min-width: 768px) {
     .logo {
         display: block;
-        // padding-top: 16px;
-        // padding-bottom: 16px;
+        margin-right: 88px;
+        padding-top: 26px;
         font-family: $secondary-font;
         font-weight: 700;
         font-size: 24px;
@@ -14,8 +42,12 @@
         }
     }
 }
+@media screen and (min-width: 1200px) {
+    .logo {
+        margin-right: 93px;
+    }
 
-
+}
 
 
 
