--- a/saas/layout/_header.scss
+++ b/saas/layout/_header.scss
@@ -5,8 +5,16 @@
 //         display: flex; 
 //     }
 // }
-@media screen and (min-width: 480px) {
-    .page-header {
+.mail-icon-svg {
+    @extend %geometry-and-transition-svg;
+ }
+.phone-icon-svg {
+    @extend %geometry-and-transition-svg;
+}
+
+@media screen and (max-width: 767px) {
+ .page-header {
+        display: block;
         position: relative;
         border-bottom: 1px solid #ECECEC;
         padding-top: 16px;
@@ -16,11 +24,12 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-
-
     }
-}
+
+    
+
 .menu-btn {
+    font-family: inherit;
     position: relative;
     z-index: 100;
     height: 40px;
@@ -37,6 +46,7 @@
         }
     }
 }
+
 .icon-cross {
     display: none;
 }
@@ -57,13 +67,17 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 
     0px 2px 4px rgba(0, 0, 0, 0.08), 
     0px 1px 3px rgba(0, 0, 0, 0.16);
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 5000ms cubic-bezier(0.4, 0, 0.2, 1);
     display: none;
     text-align: center;
 
     &.is-open {
       display: block;  
     }
+}
+.navigation-list
+{
+    margin-bottom: 60px;
 }
 .navigation-list-link {
     display: inline-block;
@@ -78,11 +92,8 @@
     }
 
 }
-
-
 .navigation-list-item:not(:last-child) {
     margin-bottom: 40px;
-
 }
 .navigation-list-item .selected::after {
         margin-top: 8px;
@@ -91,99 +102,228 @@
         width: 100%;
         height: 4px;
         background: #2196F3;
-        border-radius: 2px;
-        
+        border-radius: 2px; 
     }
-
-
 .navigation-list-item .selected {
     color: $accent-color;
 }
-// .selected::after {
-//         margin-top: 28px;
-//         content: "";
-//         display: block;
-//         width: 100%;
-//         height: 4px;
-//         background: #2196F3;
-//         border-radius: 2px;
-//     }
-
-// .navigation-list {
-//     display: flex;
-// }
-// .navigation {
-//     display: flex; 
-// }
-// .navigation-list-link {
-//     display: block;
-//     padding-top: 32px;
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     letter-spacing: 0.02em;
-//     color: $title-color;
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-
-//     &:hover,
-//     &:focus {
-//         color: $accent-color;
-//     }
-
-// }
-
-// .navigation-list-item .selected {
-//     color: $accent-color;
-// }
-// .navigation-list-item:not(:last-child) {
-//     margin-right: 50px;
-// }
-// 
-// // .header-contacts-list {
-//     display: flex;
-//     margin-left: auto;
-// }
-// .header-contacts-item {
-//     display: flex;
-//     align-items: center;
-
-//     &:not(:last-child) {
-//         margin-right: 30px;
-//     }
-// }
-
-.mail-icon-svg {
-    width: 16px;
-    height: 11.2px;
-    @extend %geometry-and-transition-svg;
- }
-.phone-icon-svg {
-    width: 10px;
-    height: 14.94px;
-    @extend %geometry-and-transition-svg;
+.header-contacts-item:not(:last-child) {
+    margin-bottom: 16px;
 }
 .header-mail-link,
 .header-tel-link {
     display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 18px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
     color: $main-color;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    
     &:hover, 
     &:focus {
         color: $accent-color; 
     }
 }
-
+.mail-icon-svg {
+    width: 16px;
+    height: 11.2px;
+ }
+.phone-icon-svg {
+    width: 10px;
+    height: 14.94px;
+}
 .header-mail-link:hover .mail-icon-svg,
 .header-mail-link:focus .mail-icon-svg,
 .header-tel-link:hover .phone-icon-svg,
 .header-tel-link:focus .phone-icon-svg {
     fill: $accent-color;
     color: $accent-color;
+}
+}
+
+@media screen and (min-width: 768px) {
+    .menu-btn{
+        display: none;
+    }
+    .page-header {
+        border-bottom: 1px solid #ECECEC;
+        
+    }
+    .header-container {
+        display: flex;
+    }
+    .menu-wrapper {
+        display: flex;
+    }
+    .navigation-list {
+        display: flex;
+        margin-right: 82px;
+    }
+    
+    .navigation-list-link {
+        display: block;
+        padding-top: 32px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: $title-color;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    
+        &:hover,
+        &:focus {
+            color: $accent-color;
+        }
+    
+    }
+    
+    .navigation-list-item .selected {
+        color: $accent-color;
+    }
+    .navigation-list-item:not(:last-child) {
+        margin-right: 50px;
+    }
+    .selected::after {
+        margin-top: 32px;
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        background: #2196F3;
+        border-radius: 2px;
+    }
+    .header-contacts-list {
+        padding-top: 21px;
+    }
+    .header-contacts-item {
+        align-items: center;
+    }
+    
+    .mail-icon-svg {
+        width: 14px;
+        height: 10px;    
+     }
+    .phone-icon-svg {
+        width: 10px;
+        height: 14px;  
+    }
+    .header-mail-link,
+    .header-tel-link {
+        display: block;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.02em;
+        color: $main-color;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover, 
+        &:focus {
+            color: $accent-color; 
+        }
+    }
+    .header-mail-link{
+        margin-bottom: 10px;
+    }
+    .header-mail-link:hover .mail-icon-svg,
+    .header-mail-link:focus .mail-icon-svg,
+    .header-tel-link:hover .phone-icon-svg,
+    .header-tel-link:focus .phone-icon-svg {
+        fill: $accent-color;
+        color: $accent-color;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .page-header {
+        border-bottom: 1px solid #ECECEC;
+    
+        .container  {
+            display: flex; 
+        }
+    }
+    .navigation-list {
+        display: flex;
+    }
+    
+    .navigation-list-link {
+        display: block;
+        padding-top: 32px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: $title-color;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    
+        &:hover,
+        &:focus {
+            color: $accent-color;
+        }
+    
+    }
+    
+    .navigation-list-item .selected {
+        color: $accent-color;
+    }
+    .navigation-list-item:not(:last-child) {
+        margin-right: 50px;
+    }
+    .selected::after {
+        margin-top: 28px;
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        background: #2196F3;
+        border-radius: 2px;
+    }
+    .header-contacts-list {
+        display: flex;
+        margin-left: auto;
+        padding-top: 32px;
+    }
+    .header-contacts-item {
+        display: flex;
+        align-items: center;
+    
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
+    
+    .mail-icon-svg {
+        width: 16px;
+        height: 11.2px;
+     }
+    .phone-icon-svg {
+        width: 10px;
+        height: 14.94px;
+    }
+    .header-mail-link,
+    .header-tel-link {
+        display: block;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: $main-color;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover, 
+        &:focus {
+            color: $accent-color; 
+        }
+    }
+    .header-mail-link {
+        margin-bottom: 0;
+    }
+    .header-mail-link:hover .mail-icon-svg,
+    .header-mail-link:focus .mail-icon-svg,
+    .header-tel-link:hover .phone-icon-svg,
+    .header-tel-link:focus .phone-icon-svg {
+        fill: $accent-color;
+        color: $accent-color;
+    }
 }
