--- a/css/main.css
+++ b/css/main.css
@@ -885,7 +885,7 @@ ul {
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 100;
+  z-index: 200;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -903,9 +903,7 @@ ul {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 528px;
-  display: flex;
-  flex-direction: column;
+  max-width: 450px;
   padding: 40px;
   background-color: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -913,9 +911,9 @@ ul {
 }
 
 .modal-form-title {
-  font-weight: bold;
+  font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
@@ -924,10 +922,10 @@ ul {
 
 .modal-form-close-btn {
   position: absolute;
-  top: 10px;
+  top: 15px;
   right: 10px;
-  width: 32px;
-  height: 32px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background-color: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -943,7 +941,7 @@ ul {
 
 .modal-form-field {
   position: relative;
-  margin-bottom: 28px;
+  margin-bottom: 30px;
 }
 
 .modal-form-input {
@@ -951,8 +949,8 @@ ul {
   display: block;
   width: 100%;
   height: 40px;
-  padding-top: 14px;
-  padding-bottom: 14px;
+  padding-top: 11px;
+  padding-bottom: 11px;
   padding-left: 42px;
   outline-color: #2196F3;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -970,8 +968,8 @@ ul {
   top: 50%;
   left: 42px;
   transform: translateY(-50%);
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.01em;
   color: #757575;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -990,7 +988,6 @@ ul {
   top: 0;
   left: 0;
   transform: translateY(calc(-100% - 4px));
-  font-size: 12px;
   color: #2196F3;
 }
 
@@ -999,13 +996,13 @@ ul {
 }
 
 .modal-form-comment {
-  width: 448px;
+  width: 370px;
   height: 120px;
   padding-top: 12px;
   padding-right: 16px;
   padding-bottom: 12px;
   padding-left: 16px;
-  margin-bottom: 28px;
+  margin-bottom: 20px;
   resize: none;
   outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1044,7 +1041,7 @@ ul {
   justify-content: center;
   width: 16px;
   height: 16px;
-  margin-right: 10px;
+  margin-right: 8px;
   border: 2px solid #212121;
 }
 
@@ -1055,11 +1052,6 @@ ul {
   opacity: 0;
 }
 
-.modal-form-checkbox:checked + .modal-form-custom-checkbox {
-  background-color: #2196F3;
-  border: 1px solid #2196F3;
-}
-
 .modal-form-checkbox:checked + .modal-form-custom-checkbox .modal-form-checkbox-icon {
   opacity: 1;
   fill: #FFFFFF;
@@ -1068,6 +1060,11 @@ ul {
 .modal-form-option-label {
   display: flex;
   align-items: center;
+}
+
+.modal-form-option-span {
+  font-size: 12px;
+  line-height: 1.16;
 }
 
 .modal-form-link {
@@ -1083,6 +1080,7 @@ ul {
   padding-right: 55px;
   padding-bottom: 10px;
   padding-left: 55px;
+  margin-top: 30px;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
@@ -1091,6 +1089,26 @@ ul {
   background-color: #2196F3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form {
+    max-width: 528px;
+  }
+  .modal-form-title {
+    line-height: 1.15;
+  }
+  .modal-form-comment {
+    width: 448px;
+  }
+  .modal-form-comment::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+  .modal-form-option-span {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .advantage-list {
