--- a/saas/components/_modal.scss
+++ b/saas/components/_modal.scss
@@ -2,7 +2,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 100;
+    z-index: 200;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
@@ -18,9 +18,7 @@
     left: 50%;
     transform: translate(-50%,-50%);
     width: 100%;
-    max-width: 528px;
-    display: flex;
-    flex-direction: column; 
+    max-width: 450px;
     padding: 40px; 
     background-color: $secondary-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
@@ -29,9 +27,9 @@
     border-radius: 4px;
 }
 .modal-form-title {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
     color: $title-color;
@@ -39,10 +37,10 @@
 }
 .modal-form-close-btn {
     position: absolute;
-    top: 10px;
+    top: 15px;
     right: 10px;
-    width: 32px;
-    height: 32px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     background-color: $secondary-color;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -54,18 +52,17 @@
     fill: $accent-color;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
-
 .modal-form-field {
     position: relative;
-    margin-bottom: 28px;
+    margin-bottom: 30px;
 }
 .modal-form-input {
     position: relative;
     display: block;
     width: 100%;
     height: 40px;
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding-top: 11px;
+    padding-bottom: 11px;
     padding-left: 42px;
     outline-color: $accent-color;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -83,8 +80,8 @@
     top: 50%;
     left: 42px;
     transform: translateY(-50%);
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.01em;
     color: $main-color;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -101,20 +98,19 @@
     top: 0;
     left: 0;
     transform: translateY(calc(-100% - 4px));
-    font-size: 12px;
     color: $accent-color;
 }
 .modal-form-input:focus ~ .modal-form-icon {
     fill: $accent-color;
 }
 .modal-form-comment {
-    width: 448px;
+    width: 370px;
     height: 120px;
     padding-top: 12px;
     padding-right: 16px;
     padding-bottom: 12px;
     padding-left: 16px;
-    margin-bottom: 28px;
+    margin-bottom: 20px;
     resize: none;
     outline: transparent;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -152,7 +148,7 @@
     justify-content: center; 
     width: 16px;
     height: 16px;
-    margin-right: 10px;
+    margin-right: 8px;
     border: 2px solid $title-color;
 }
 .modal-form-checkbox-icon {
@@ -161,10 +157,6 @@
     justify-content: center; 
     opacity: 0;
 }
-.modal-form-checkbox:checked + .modal-form-custom-checkbox {
-    background-color: $accent-color;
-    border: 1px solid $accent-color;
-}
 .modal-form-checkbox:checked + .modal-form-custom-checkbox .modal-form-checkbox-icon {
     opacity: 1;
     fill: $secondary-color;  
@@ -172,6 +164,10 @@
 .modal-form-option-label {
     display: flex;
     align-items: center;
+}
+.modal-form-option-span {
+    font-size: 12px;
+    line-height: 1.16;
 }
 .modal-form-link {
     text-decoration: underline;
@@ -186,6 +182,7 @@
     padding-right: 55px;
     padding-bottom: 10px;
     padding-left: 55px; 
+    margin-top: 30px;
     font-weight: bold;
     font-size: 16px;
     line-height: 1.87;
@@ -195,3 +192,41 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
     border-radius: 4px;
 }
+@media screen and (min-width: 1200px) {
+    .modal-form {
+        max-width: 528px;
+    }
+    .modal-form-title {
+        line-height: 1.15;
+    }
+    .modal-form-comment {
+        width: 448px;
+    }
+    .modal-form-comment::placeholder {
+        font-size: 12px;
+        line-height: 1.16;
+    }
+    .modal-form-option-span {
+        font-size: 14px;
+        line-height: 1.71;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
