--- a/saas/layout/_hero.scss
+++ b/saas/layout/_hero.scss
@@ -4,6 +4,7 @@
         padding-top: 118px;
         max-width: 480px;
         height: 400px;
+        margin: 0 auto;
         background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
