--- a/saas/layout/_work-direction.scss
+++ b/saas/layout/_work-direction.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1199px) {
+    .work-direction {
+        display: none;
+    }
+}
+@media screen and (min-width: 1200px) {
 .work-direction-title {
     margin-bottom: 50px;
     font-weight: 700;
@@ -31,4 +37,5 @@
     text-transform: uppercase;
     color: $secondary-color;
     background-color: rgba(47, 48, 58, 0.8);
+    }
 }
