--- a/saas/layout/_team.scss
+++ b/saas/layout/_team.scss
@@ -1,45 +1,6 @@
 .team {
     background-color: #F5F4FA;
 }
-.team-list {
-    display: flex;
-}
-.team-title {
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    color: $title-color;
-}
-.team-list-item {
-    width: calc((100% - 30px*3)/4);
-    background: $secondary-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-
-    &:not(:last-child) {
-        margin-right: 30px;   
-    }
-}
-
-.team-list-item-image {
-    margin-bottom: 30px;
-}
-.team-list-item-name {
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-    color: $title-color;
-}
-.team-list-item-position {
-    margin-bottom: 16px;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-}
 .social-list {
     display: flex;
     justify-content: center;
@@ -74,3 +35,82 @@
     fill: $secondary-color;
     color: $accent-color;
 }
+@media screen and (min-width: 480px) {
+    .team-title {
+    margin-bottom: 30px;
+    font-weight: 700;
+    font-size: 28x;
+    line-height: 1.17;
+    text-align: center;
+    color: $title-color;
+}
+.team-list-item-image {
+    width: 450px;
+    margin-bottom: 30px;
+}
+.team-list-item {
+    width: 100%;
+    background: $secondary-color;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+    0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+    &:not(:last-child) {
+        margin-bottom: 30px;   
+    }
+}
+.team-list-item-name {
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    color: $title-color;
+}
+.team-list-item-position {
+    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+ }
+}
+
+@media screen and (min-width: 768px) {
+    .team-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+.team-list-item {
+    width: calc((100% - 30px*1)/2);
+    background: $secondary-color;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+    &:nth-child(2n+1) {
+        margin-right: 30px;   
+    }
+}
+.team-list-item-image {
+    width: 354px;
+}
+}
+@media screen and (min-width: 1200px) {
+   .team-list {
+    display: flex;
+} 
+.team-list-item {
+    width: calc((100% - 30px*3)/4);
+    background: $secondary-color;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+    &:not(:last-child) {
+        margin-right: 30px;   
+    }
+}
+.team-list-item-image {
+    width: 354px;
+}
+}
+
