--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -425,6 +425,7 @@ ul {
 }
 
 .container {
+  width: 100%;
   padding-right: 15px;
   padding-left: 15px;
 }
@@ -432,7 +433,8 @@ ul {
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
