--- a/saas/components/_container.scss
+++ b/saas/components/_container.scss
@@ -1,21 +1,18 @@
 .container {
+    width: 100%;
     padding-right: 15px;
     padding-left: 15px; 
-}
 @media screen and (min-width: 480px) {
-    .container {
         width: 480px;
-        margin: 0 auto;
-    }
+        margin-left: auto;
+        margin-right: auto;
 }
 @media screen and (min-width: 768px) {
-    .container {
-        width: 768px;
-    }
+    width: 768px;
 }
 @media screen and (min-width: 1200px) {
-    .container {
-        width: 1200px; 
+    width: 1200px; 
     }
 }
+
 
