--- a/css/main.css
+++ b/css/main.css
@@ -344,7 +344,7 @@ template {
   line-height: 1.71;
 }
 
-.modal-form-btn, .clients-list-link, .contact-form-button {
+.modal-form-btn, .clients-list-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -497,6 +497,7 @@ ul {
     transition: transform 5000ms cubic-bezier(0.4, 0, 0.2, 1);
     display: none;
     text-align: center;
+    z-index: 99;
   }
   .menu-wrapper.is-open {
     display: block;
@@ -865,6 +866,7 @@ ul {
 
 .modal-btn {
   border: transparent;
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -882,10 +884,31 @@ ul {
 
 .btn-list {
   display: flex;
-  justify-content: center;
-  padding-top: 93px;
-  padding-bottom: 50px;
-  cursor: pointer;
+  flex-wrap: wrap;
+  padding-top: 60px;
+}
+
+@media screen and (max-width: 768px) {
+  .btn-list {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .btn-list {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    padding-top: 94px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .btn-list-item {
+    padding-bottom: 15px;
+  }
 }
 
 .btn-list-item:not(:last-child) {
@@ -1146,11 +1169,33 @@ ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .advantage-list {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .advantage-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .advantage-list-item {
     width: calc((100% - 30px)/2);
   }
   .advantage-list-item:nth-child(2n+1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantage-list-item {
+    width: calc((100% - 30px*3)/4);
+  }
+  .advantage-list-item:not(:last-child) {
     margin-right: 30px;
   }
 }
@@ -1166,13 +1211,14 @@ ul {
   justify-content: center;
   padding-top: 25px;
   padding-bottom: 25px;
+  margin-bottom: 30px;
   background: #F5F4FA;
 }
 
 @media screen and (min-width: 480px) {
   .advantage-icon-block {
-    padding-right: 205px;
-    padding-left: 205px;
+    padding-right: 190px;
+    padding-left: 190px;
   }
 }
 
@@ -1190,6 +1236,26 @@ ul {
   }
 }
 
+.advantage-list-title {
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: #212121;
+}
+
+@media screen and (max-width: 767px) {
+  .advantage-list-title {
+    text-align: center;
+  }
+}
+
+.advantage-list-text {
+  font-size: 14px;
+  line-height: 1.71;
+}
+
 @media screen and (max-width: 1199px) {
   .work-direction {
     display: none;
@@ -1197,39 +1263,47 @@ ul {
 }
 
 @media screen and (min-width: 1200px) {
-  .work-direction-title {
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    color: #212121;
+  .work-direction {
+    padding-top: 0;
   }
-  .work-direction-list {
-    display: flex;
-  }
-  .work-direction-list-item {
-    width: calc((100% - 30px*2)/3);
-    position: relative;
-  }
-  .work-direction-list-item:not(:last-child) {
-    margin-right: 30px;
-  }
-  .work-direction-wrapper {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 70px;
-    padding-top: 27px;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    background-color: rgba(47, 48, 58, 0.8);
-  }
+}
+
+.work-direction-title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: #212121;
+}
+
+.work-direction-list {
+  display: flex;
+}
+
+.work-direction-list-item {
+  width: calc((100% - 30px*2)/3);
+  position: relative;
+}
+
+.work-direction-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.work-direction-wrapper {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  padding-top: 27px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 .team {
@@ -1269,41 +1343,41 @@ ul {
   color: #2196F3;
 }
 
+.team-title {
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 28x;
+  line-height: 1.17;
+  text-align: center;
+  color: #212121;
+}
+
+.team-list-item-name {
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  color: #212121;
+}
+
+.team-list-item-position {
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+}
+
 @media screen and (min-width: 480px) {
-  .team-title {
-    margin-bottom: 30px;
-    font-weight: 700;
-    font-size: 28x;
-    line-height: 1.17;
-    text-align: center;
-    color: #212121;
-  }
   .team-list-item-image {
     width: 450px;
     margin-bottom: 30px;
   }
-  .team-list-item {
-    width: 100%;
-    background: #FFFFFF;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-  }
-  .team-list-item:not(:last-child) {
-    margin-bottom: 30px;
-  }
-  .team-list-item-name {
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    color: #212121;
-  }
-  .team-list-item-position {
-    margin-bottom: 16px;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list-item-image {
+    width: 354px;
   }
 }
 
@@ -1312,57 +1386,118 @@ ul {
     display: flex;
     flex-wrap: wrap;
   }
-  .team-list-item {
-    width: calc((100% - 30px*1)/2);
-    background: #FFFFFF;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-  }
-  .team-list-item:nth-child(2n+1) {
-    margin-right: 30px;
-  }
-  .team-list-item-image {
-    width: 354px;
-  }
 }
 
 @media screen and (min-width: 1200px) {
   .team-list {
     display: flex;
+    flex-wrap: nowrap;
   }
+}
+
+.team-list-item {
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .team-list-item {
+    width: 100%;
+  }
+  .team-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-list-item {
+    width: calc((100% - 30px)/2);
+  }
+  .team-list-item:nth-child(2n+1) {
+    margin-right: 30px;
+  }
+  .team-list-item:not(:nth-last-child(-n+2)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .team-list-item {
     width: calc((100% - 30px*3)/4);
-    background: #FFFFFF;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
   }
   .team-list-item:not(:last-child) {
     margin-right: 30px;
-  }
-  .team-list-item-image {
-    width: 354px;
   }
 }
 
 .clients-list {
   display: flex;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: nowrap;
+  }
 }
 
 .clients-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   color: #212121;
 }
 
-.clietnts-list-item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .clients-title {
+    margin-bottom: 30px;
+    font-size: 36px;
+    line-height: 1.16;
+  }
+}
+
+.clients-list-item {
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 767px) {
+  .clients-list-item {
+    width: calc((100% - 30px)/2);
+  }
+  .clients-list-item:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .clients-list-item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients-list-item {
+    width: calc((100% - 30px*2)/3);
+  }
+  .clients-list-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .clients-list-item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list-item {
+    width: calc((100% - 30px*5)/6);
+  }
+  .clients-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .clients-list-link {
-  width: 170px;
   height: 90px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
@@ -1385,20 +1520,33 @@ ul {
   fill: #2196F3;
 }
 
-.footer {
+.footer .container {
   background-color: #2F303A;
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.footer .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
+@media screen and (min-width: 768px) {
+  .footer .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
-.contacts {
-  margin-right: 30px;
-  width: 270px;
+@media screen and (max-width: 1199px) {
+  .footer .container {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: baseline;
+    justify-content: center;
+  }
 }
 
 .logo-footer {
@@ -1406,17 +1554,32 @@ ul {
   margin-bottom: 20px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   color: #FFFFFF;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .logo-footer .logo-footer-item {
   color: #2196F3;
 }
 
-.contacts-block-list-item:not(:last-child) {
-  margin-bottom: 9px;
+@media screen and (min-width: 768px) {
+  .footer-box {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-box:not(:last-child) {
+    margin-bottom: 60px;
+  }
 }
 
 .footer-map-link {
@@ -1442,12 +1605,12 @@ ul {
   color: #2196F3;
 }
 
-.footer-list-link {
-  display: flex;
+.contacts-block-list-item:not(:last-child) {
+  margin-bottom: 8px;
 }
 
-.social-links-block {
-  width: 270px;
+.footer-list-link {
+  display: inline-flex;
 }
 
 .social-links-block-text {
@@ -1490,12 +1653,17 @@ ul {
   color: #2196F3;
 }
 
-.contact-form-wrapper {
-  width: 570px;
-}
-
 .contact-form-block {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-form-block {
+    display: flex;
+    flex-wrap: nowrap;
+  }
 }
 
 .contact-form-title {
@@ -1510,13 +1678,26 @@ ul {
 }
 
 .contact-form-input {
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
+  margin-bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2F303A;
+}
+
+@media screen and (max-width: 1199px) {
+  .contact-form-input {
+    width: 450px;
+    height: 50px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-form-input {
+    width: 360px;
+    height: 50px;
+    margin-right: 12px;
+  }
 }
 
 .contact-form-input::placeholder {
@@ -1535,13 +1716,19 @@ ul {
 }
 
 .contact-form-button {
-  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 50px;
-  text-align: center;
+  padding-top: 10px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  padding-left: 30px;
   background-color: #2196F3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  font-weight: bold;
+  font-family: inherit;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   text-align: center;
