--- a/saas/layout/_advantages.scss
+++ b/saas/layout/_advantages.scss
@@ -1,7 +1,7 @@
 .advantage-list {
-    @media screen and (min-width:768px) and (max-width: 1199px) {
+    @media screen and (min-width:768px) {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 
 @media screen and (min-width: 1200px) {
@@ -10,12 +10,19 @@
 }
 }
 .advantage-list-item {
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
+     &:not(:last-child) {
+        margin-bottom: 30px;  
+      }
+
+    }
+@media screen and (min-width: 768px) {
     width: calc((100% - 30px)/2);
 
     &:nth-child(2n+1) {
     margin-right: 30px; 
- }
+    }
+}
  @media screen and (min-width: 1200px) {
     width: calc((100% - 30px*3)/4);
 
@@ -23,7 +30,7 @@
       margin-right: 30px;  
     }
 }
-
+}
 .advantage-list-icon {
     width: 70px;
     height: 70px;
@@ -34,11 +41,12 @@
     justify-content: center;
     padding-top: 25px;
     padding-bottom: 25px;
+    margin-bottom: 30px;
     background: #F5F4FA;
 
 @media screen and (min-width: 480px) {
-    padding-right: 205px;
-    padding-left: 205px;
+    padding-right: 190px;
+    padding-left: 190px;
 }
 @media screen and (min-width: 768px){
     padding-right: 142px;
@@ -49,126 +57,20 @@
     padding-left: 100px;
 }
 }
+.advantage-list-title {
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: $title-color;
 
+@media screen and (max-width: 767px) {
+    text-align: center;
+  }
+}
+.advantage-list-text {
+    font-size: 14px;
+    line-height: 1.71;
+}
 
-//     padding-left: 100px;
-//     padding-right: 100px;
-//     margin-bottom: 30px;
-//     background: #F5F4FA;
-//     border-radius: 4px;   
-// }
-// .advantage-list-title {
-//     margin-bottom: 10px;
-//     font-weight: 700;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     text-transform: uppercase;
-//     color: $title-color;
-// }
-// .advantage-list-image {
-//     margin-bottom: 30px;
-// }
-// .advantage-list-text {
-//     font-size: 14px;
-//     line-height: 1.71;
-// }
-
-
-
-
-
-// .advantage-list-icon {
-//     width: 70px;
-//     height: 70px;
-// }
-// .advantage-list-title {
-//     margin-bottom: 10px;
-//     font-weight: 700;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     text-transform: uppercase;
-//     color: $title-color;
-//     }
-// .advantage-list-text {
-//     font-size: 14px;
-//     line-height: 1.71;
-//     }
-
-
-
-// @media screen and (max-width: 767px) {
-//     .advantage-icon-block {
-//         padding-top: 25px;
-//         padding-right: 190px;
-//         padding-bottom: 25px;
-//         padding-left: 190px;
-//         margin-bottom: 30px;
-//         background: #F5F4FA;
-//         border-radius: 4px;   
-//     }
-//     .advantage-list-title {
-//         text-align: center;
-//         }
-//     .advantage-list-item:not(:last-child) {
-//         margin-bottom: 30px;
-//         }
-// }
-// @media screen and (min-width: 768px) {
-//     .advantage-list {
-//         display: flex;
-//         flex-wrap: wrap;
-//     }
-//     .advantage-list-item {
-//         width: calc((100% - 30px*1)/2);
-
-//         &:nth-child(2n+1) {
-//             margin-right: 30px;
-//         }
-//     }
-//     .advantage-icon-block {
-//         padding-top: 25px;
-//         padding-right: 142px;
-//         padding-bottom: 25px;
-//         padding-left: 142px;
-//         margin-bottom: 30px;
-//         background: #F5F4FA;
-//         border-radius: 4px;   
-//     }
-// }
-// @media screen and (min-width: 1200px) {
-//     .advantage-list {
-//         display: flex;
-//     }
-    
-// .advantage-list-item {
-//     width: calc((100% - 30px*3)/4);
-
-//     &:not(:last-child) {
-//         margin-right: 30px;  
-//     }
-// }
-
-// .advantage-icon-block {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     padding-top: 25px;
-//     padding-right: 100px;
-//     padding-bottom: 25px;
-//     padding-left: 100px;
-//     margin-bottom: 30px;
-//     background: #F5F4FA;
-//     border-radius: 4px;   
-// }
-// .advantage-list-title {
-//     margin-bottom: 10px;
-//     font-weight: 700;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     text-transform: uppercase;
-//     color: $title-color;
-// }
-// .advantage-list-text {
-//     font-size: 14px;
-//     line-height: 1.71;
-// }
