--- a/saas/layout/_clients.scss
+++ b/saas/layout/_clients.scss
@@ -1,19 +1,55 @@
 .clients-list {
     display: flex;
+    flex-wrap: wrap;
+@media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+}
 }
 .clients-title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.17;
     text-align: center;
     color: $title-color;
+@media screen and (min-width: 1200px) {
+    margin-bottom: 30px;
+    font-size: 36px;
+    line-height: 1.16;
+ }
 }
-.clietnts-list-item:not(:last-child) {
-    margin-right: 30px;
-} 
+.clients-list-item {
+    margin-bottom: 30px;
+@media screen and (max-width: 767px) {
+    width: calc((100% - 30px)/2);
+
+    &:nth-child(odd) {
+        margin-right: 30px;
+    }
+    &:nth-last-child(-n+2) {
+        margin-bottom:0;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 30px*2)/3); 
+
+    &:not(:nth-child(3n)) {
+        margin-right: 30px;   
+    }
+    &:nth-last-child(-n+3) {
+        margin-bottom: 0;  
+    }
+}
+@media screen and (min-width: 1200px) {
+    width: calc((100% - 30px*5)/6); 
+
+    &:not(:last-child) {
+        margin-right: 30px;
+    }
+}
+}
 .clients-list-link {
-    width: 170px;
     height: 90px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
