--- a/saas/layout/_footer.scss
+++ b/saas/layout/_footer.scss
@@ -1,35 +1,51 @@
-.footer {
+.footer .container {
     background-color:#2F303A;
     padding-top: 60px;
-
-    .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+    padding-bottom: 60px;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
-} 
+    @media screen and (max-width: 1199px) {
+      text-align: center;
+        }
 
-.contacts {
-    margin-right: 30px;
-    width: 270px;
+@media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: baseline;
+    justify-content: center;   
+}
 }
 .logo-footer {
     display: block;
     margin-bottom: 20px;
     font-family: $secondary-font;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.16;
     color: $secondary-color;
 
-    .logo-footer-item {
+@media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+}
+.logo-footer-item {
         color: $accent-color;  
     }
 }
-
-.contacts-block-list-item:not(:last-child) {
-    margin-bottom: 9px;
+.footer-box {
+    @media screen and (min-width: 768px) {
+        width: 50%;
+    }
 }
+.footer-box:not(:last-child) {
+@media screen and (max-width: 1199px){ 
+        margin-bottom: 60px;
+}
+}
+
 .footer-map-link {
     @extend %font-for-address-link;
     color: $secondary-color;
@@ -53,11 +69,13 @@
         color: $accent-color;
     }
 }
-.footer-list-link {
-    display: flex;
+
+.contacts-block-list-item:not(:last-child) {
+    margin-bottom: 8px;
 }
-.social-links-block {
-    width: 270px;
+
+.footer-list-link {
+    display: inline-flex;
 }
 .social-links-block-text {
     display: block;
@@ -90,19 +108,20 @@
         text-align: center;
         padding: 12px; 
     }
-
 } 
-
 .footer-social-list-link:hover .footer-social-icon,
 .footer-social-list-link:focus .footer-social-icon {
     fill: $secondary-color;
     color: $accent-color;
 }
-.contact-form-wrapper {
-    width: 570px;
-}
 .contact-form-block {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+@media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+}
 }
 .contact-form-title {
     display: block;
@@ -115,13 +134,22 @@
     color: $secondary-color;
 }
 .contact-form-input {
-    width: 358px;
-    height: 50px;
-    margin-right: 12px;
+    margin-bottom: 20px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: #2F303A;
+
+@media screen and (max-width: 1199px) {
+    width: 450px;
+    height: 50px;
+   
+}
+@media screen and (min-width: 1200px) {
+    width: 360px;
+    height: 50px;
+    margin-right: 12px;
+}
 }
 .contact-form-input::placeholder {
     font-size: 16px;
@@ -137,20 +165,27 @@
     padding-left: 16px;
 }
 .contact-form-button {
-    @extend %align-center;
-    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 50px;
-    text-align: center;
+    padding-top: 10px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    padding-left: 30px;
     background-color: $accent-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    font-weight: bold;
+    font-family: inherit;
+    font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
     text-align: center;
     letter-spacing: 0.06em;
     color: $secondary-color;
+    
 }
+ 
 .contact-form-icon {
     margin-left: 10px;
     fill: $secondary-color;
