--- a/saas/layout/_header.scss
+++ b/saas/layout/_header.scss
@@ -70,6 +70,7 @@
     transition: transform 5000ms cubic-bezier(0.4, 0, 0.2, 1);
     display: none;
     text-align: center;
+    z-index: 99;
 
     &.is-open {
       display: block;  
