--- a/saas/layout/_team.scss
+++ b/saas/layout/_team.scss
@@ -35,30 +35,13 @@
     fill: $secondary-color;
     color: $accent-color;
 }
-@media screen and (min-width: 480px) {
-    .team-title {
+.team-title {
     margin-bottom: 30px;
     font-weight: 700;
     font-size: 28x;
     line-height: 1.17;
     text-align: center;
     color: $title-color;
-}
-.team-list-item-image {
-    width: 450px;
-    margin-bottom: 30px;
-}
-.team-list-item {
-    width: 100%;
-    background: $secondary-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
-    0px 1px 1px rgba(0, 0, 0, 0.14), 
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-
-    &:not(:last-child) {
-        margin-bottom: 30px;   
-    }
 }
 .team-list-item-name {
     margin-bottom: 10px;
@@ -74,43 +57,65 @@
     line-height: 1.18;
     text-align: center;
  }
-}
-
-@media screen and (min-width: 768px) {
-    .team-list {
-    display: flex;
-    flex-wrap: wrap;
-}
-.team-list-item {
-    width: calc((100% - 30px*1)/2);
-    background: $secondary-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-
-    &:nth-child(2n+1) {
-        margin-right: 30px;   
-    }
-}
 .team-list-item-image {
+
+@media screen and (min-width: 480px) {
+    width: 450px;
+    margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px)  {
     width: 354px;
 }
 }
-@media screen and (min-width: 1200px) {
-   .team-list {
+.team-list {
+@media screen and (min-width: 768px) {
     display: flex;
-} 
+    flex-wrap: wrap;
+    }  
+@media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+ } 
+}
+
 .team-list-item {
-    width: calc((100% - 30px*3)/4);
     background: $secondary-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+    0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+@media screen and (max-width: 767px) {
+    width: 100%;
+
+    &:not(:last-child) {
+        margin-bottom: 30px;   
+    }
+}
+
+
+
+@media screen and (min-width: 768px) {
+    width: calc((100% - 30px)/2);
+
+    &:nth-child(2n+1) {
+        margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n+2)) {
+            margin-bottom: 30px;  
+        }
+
+  
+}  
+@media screen and (min-width: 1200px) {
+    width: calc((100% - 30px*3)/4);
 
     &:not(:last-child) {
         margin-right: 30px;   
     }
-}
-.team-list-item-image {
-    width: 354px;
+    
 }
 }
+
+
 
