--- a/saas/layout/_work-examples.scss
+++ b/saas/layout/_work-examples.scss
@@ -1,12 +1,21 @@
 .work-example {
+    padding-top: 40px;
+    padding-bottom: 60px;
+@media screen and (min-width: 768px) {
+    padding-top: 30px;
+    padding-bottom: 60px;
+}
+@media screen and (min-width: 120px) {
+    padding-top: 50px;
     padding-bottom: 94px;
+}
 }
 .work-examples-list {
     display: flex;
     flex-wrap: wrap;
 }
 .work-examples-item {
-    width: 370px;
+    width: 100%;
     border: 1px solid #EEEEEE;
 
     &:not(:nth-child(3n)) {
