--- a/css/main.css
+++ b/css/main.css
@@ -888,7 +888,7 @@ ul {
   padding-top: 60px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .btn-list {
     display: flex;
     flex-wrap: nowrap;
@@ -896,7 +896,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .btn-list {
     display: flex;
     flex-wrap: nowrap;
