--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -790,7 +790,7 @@ ul {
   padding-top: 60px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .btn-list {
     display: flex;
     flex-wrap: nowrap;
@@ -798,7 +798,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .btn-list {
     display: flex;
     flex-wrap: nowrap;
@@ -846,7 +846,7 @@ ul {
   }
 }
 
-@media screen and (min-width: 120px) {
+@media screen and (min-width: 1200px) {
   .work-example {
     padding-top: 50px;
     padding-bottom: 94px;
@@ -859,7 +859,6 @@ ul {
 }
 
 .work-examples-item {
-  width: 100%;
   border: 1px solid #EEEEEE;
 }
 
@@ -898,8 +897,13 @@ ul {
 }
 
 .work-examples-wrapper {
+  width: 450px;
   position: relative;
   overflow: hidden;
+}
+
+.work-examples-item-link-image {
+  width: 100%;
 }
 
 .work-examples-desc {
