--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -655,6 +655,7 @@ ul {
   }
   .navigation-list {
     display: flex;
+    margin-right: 305px;
   }
   .navigation-list-link {
     display: block;
@@ -862,12 +863,34 @@ ul {
   border: 1px solid #EEEEEE;
 }
 
-.work-examples-item:not(:nth-child(3n)) {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .work-examples-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.work-examples-item:not(:nth-last-child(-n+3)) {
-  margin-bottom: 30px;
+@media screen and (max-width: 1199px) {
+  .work-examples-item {
+    width: calc((100% - 30px)/2);
+  }
+  .work-examples-item:nth-child(2n+1) {
+    margin-right: 30px;
+  }
+  .work-examples-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .work-examples-item {
+    width: calc((100% - 30px*2)/3);
+  }
+  .work-examples-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .work-examples-item:not(:nth-last-child(-n+3)) {
+    margin-bottom: 30px;
+  }
 }
 
 .work-examples-item:hover {
@@ -897,22 +920,23 @@ ul {
 }
 
 .work-examples-wrapper {
-  width: 450px;
   position: relative;
   overflow: hidden;
 }
 
-.work-examples-item-link-image {
-  width: 100%;
+@media screen and (max-width: 767px) {
+  .work-examples-item-link-image {
+    width: 100%;
+  }
 }
 
 .work-examples-desc {
   position: absolute;
   top: 0;
   left: 0;
-  padding-top: 63px;
+  padding-top: 77px;
   padding-right: 24px;
-  padding-bottom: 63px;
+  padding-bottom: 77px;
   padding-left: 24px;
   width: 100%;
   height: 100%;
@@ -923,6 +947,20 @@ ul {
   transform: translateY(100%);
   opacity: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .work-examples-desc {
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .work-examples-desc {
+    padding-top: 63px;
+    padding-bottom: 63px;
+  }
 }
 
 .work-examples-item-link:hover .work-examples-desc {
