--- a/saas/layout/_team.scss
+++ b/saas/layout/_team.scss
@@ -95,7 +95,7 @@
 
 
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1199px) {
     width: calc((100% - 30px)/2);
 
     &:nth-child(2n+1) {
