--- a/saas/layout/_work-examples.scss
+++ b/saas/layout/_work-examples.scss
@@ -15,16 +15,38 @@
     flex-wrap: wrap;
 }
 .work-examples-item {
-    // width: 450px;
     border: 1px solid #EEEEEE;
+    
+@media screen and (max-width: 767px) {
+    &:not(:last-child) {
+        margin-bottom: 30px;
+    }
+}
+@media screen and (max-width: 1199px) {
+    width: calc((100% - 30px)/2);
 
+    &:nth-child(2n+1) {
+        margin-right: 30px;
+    }
+    &:not(:last-child) {
+        margin-bottom: 30px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    width: calc((100% - 30px*2)/3);
+    
     &:not(:nth-child(3n)) {
         margin-right: 30px;   
     }
     &:not(:nth-last-child(-n+3)) {
         margin-bottom: 30px;  
     }
-}
+  }
+ }
+
+
+
+
 .work-examples-item:hover { 
     box-shadow: 1px 4px 6px 
     rgba(0, 0, 0, 0.16), 0px 4px 4px 
@@ -51,21 +73,21 @@
     color: $main-color;
 }
 .work-examples-wrapper {
-    width: 450px;
     position: relative;
     overflow: hidden;
-    
 }
 .work-examples-item-link-image {
+@media screen and (max-width: 767px) {
     width: 100%;
  }
+}
 .work-examples-desc {
     position: absolute;
     top: 0;
     left: 0; 
-    padding-top: 63px;
+    padding-top: 77px;
     padding-right: 24px;
-    padding-bottom: 63px;
+    padding-bottom: 77px;
     padding-left: 24px;
     width: 100%;
     height: 100%;
@@ -75,11 +97,17 @@
     color: $secondary-color;
     transform: translateY(100%);
     opacity: 0;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+@media screen and (min-width: 768px) {
+    padding-top: 49px;
+    padding-bottom: 49px;
+}
+@media screen and (min-width: 1200px) {
+    padding-top: 63px;
+    padding-bottom: 63px;
+}
 }
 .work-examples-item-link:hover .work-examples-desc {
     transform: translateY(0%);
-    opacity: 1;
-    
+    opacity: 1;  
 }
