--- a/css/main.css
+++ b/css/main.css
@@ -783,19 +783,19 @@ ul {
   text-align: center;
   max-width: 100%;
   padding-top: 118px;
-  width: 480px;
-  height: 400px;
+  padding-bottom: 118px;
+  width: 100%;
+  height: auto;
   background-repeat: no-repeat;
   background-color: #2f303a;
   display: flex;
   justify-content: center;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
-  background-size: 480px 400px;
+  background-size: 100% 100%;
 }
 
 @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .hero {
-    height: 400px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg@2x.jpg);
   }
 }
@@ -803,10 +803,11 @@ ul {
 @media screen and (min-width: 768px) {
   .hero {
     padding-top: 118px;
-    width: 768px;
-    height: 400px;
+    padding-bottom: 118px;
+    width: 100%;
+    height: auto;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-tablet.jpg);
-    background-size: contain;
+    background-size: 100% 100%;
   }
 }
 
@@ -997,8 +998,8 @@ ul {
 
 .modal-form-close-btn {
   position: absolute;
-  top: 15px;
-  right: 10px;
+  top: 40px;
+  right: 13px;
   width: 30px;
   height: 30px;
   border-radius: 50%;
