--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -845,9 +845,11 @@ ul {
   }
 }
 
-.work-examples-list {
-  display: flex;
-  flex-wrap: wrap;
+@media screen and (min-width: 768px) {
+  .work-examples-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .work-examples-item {
@@ -860,7 +862,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .work-examples-item {
     width: calc((100% - 30px)/2);
   }
