--- a/saas/layout/_header.scss
+++ b/saas/layout/_header.scss
@@ -1,10 +1,3 @@
-// .page-header {
-//     border-bottom: 1px solid #ECECEC;
-
-//     .container  {
-//         display: flex; 
-//     }
-// }
 .mail-icon-svg {
     @extend %geometry-and-transition-svg;
  }
@@ -76,8 +69,7 @@
       display: block;  
     }
 }
-.navigation-list
-{
+.navigation-list {
     margin-bottom: 60px;
 }
 .navigation-list-link {
