--- a/saas/layout/_hero.scss
+++ b/saas/layout/_hero.scss
@@ -3,8 +3,9 @@
     text-align: center;
     max-width: 100%;
     padding-top: 118px;
-    width: 480px;
-    height: 400px;
+    padding-bottom: 118px;
+    width: 100%;
+    height: auto;
     background-repeat: no-repeat; 
     background-color: rgb(47, 48, 58); 
     display: flex;
@@ -13,7 +14,7 @@
    rgba(47, 48, 58, 0.4),
    rgba(47, 48, 58, 0.4)),
    url(../images/hero-bg.jpg);
-   background-size: 480px 400px;
+   background-size: 100% 100%;
 
 
 @media screen and (min-width: 480px) {
@@ -21,7 +22,6 @@
 @media screen and (min-device-pixel-ratio: 2),
 screen and (min-resolution: 192dpi),
 screen and (min-resolution: 2dppx) {
-   height: 400px;
 
      background-image: linear-gradient(
      rgba(47, 48, 58, 0.4),
@@ -33,13 +33,14 @@ screen and (min-resolution: 2dppx) {
 
 @media screen and (min-width: 768px) {
   padding-top: 118px;
-  width: 768px;
-  height: 400px;
+  padding-bottom: 118px;
+  width: 100%;
+  height: auto;
   background-image: linear-gradient(
    rgba(47, 48, 58, 0.4),
    rgba(47, 48, 58, 0.4)),
    url(../images/hero-bg-tablet.jpg);
-   background-size: contain;
+  background-size: 100% 100%;
 
 @media screen and (min-device-pixel-ratio: 2),
 screen and (min-resolution: 192dpi),
